--- a/pom.xml
+++ b/pom.xml
@@ -14,39 +14,42 @@
             <url>http://repo.spring.io/release</url>
         </repository>
     </repositories>
+    <properties>
+        <spring.version>5.0.6.RELEASE</spring.version>
+    </properties>
      <dependencies>
          <!--spring-->
          <dependency>
              <groupId>org.springframework</groupId>
              <artifactId>spring-context</artifactId>
-             <version>5.0.6.RELEASE</version>
+             <version>${spring.version}</version>
          </dependency>
          <dependency>
              <groupId>org.springframework</groupId>
              <artifactId>spring-context</artifactId>
-             <version>5.0.6.RELEASE</version>
+             <version>${spring.version}</version>
          </dependency>
          <dependency>
              <groupId>org.springframework</groupId>
-             <artifactId>spring-springmvc</artifactId>
-             <version>5.0.6.RELEASE</version>
+             <artifactId>spring-webmvc</artifactId>
+             <version>${spring.version}</version>
          </dependency>
          <dependency>
              <groupId>org.springframework</groupId>
-             <artifactId>spring-springmvc</artifactId>
-             <version>5.0.6.RELEASE</version>
+             <artifactId>spring-webmvc</artifactId>
+             <version>${spring.version}</version>
          </dependency>
 
          <dependency>
              <groupId>org.springframework</groupId>
              <artifactId>spring-web</artifactId>
-             <version>5.0.6.RELEASE</version>
+             <version>${spring.version}</version>
          </dependency>
 
          <dependency>
              <groupId>org.springframework</groupId>
              <artifactId>spring-jdbc</artifactId>
-             <version>5.0.6.RELEASE</version>
+             <version>${spring.version}</version>
          </dependency>
          <dependency>
              <groupId>org.mybatis</groupId>
@@ -59,6 +62,20 @@
              <artifactId>mysql-connector-java</artifactId>
              <version>5.1.47</version>
          </dependency>
+         <!--连接池-->
+         <dependency>
+             <groupId>commons-dbcp</groupId>
+             <artifactId>commons-dbcp</artifactId>
+             <version>1.4</version>
+         </dependency>
+
+         <dependency>
+             <groupId>junit</groupId>
+             <artifactId>junit</artifactId>
+             <version>4.12</version>
+             <scope>test</scope>
+         </dependency>
+
          <!--mybatis-->
          <dependency>
              <groupId>org.mybatis</groupId>
@@ -66,11 +83,6 @@
              <version>3.4.6</version>
          </dependency>
      </dependencies>
-
-
-
-
-
     <build>
         <finalName>Tr-server</finalName>
         <plugins>
